--- a/PR246-Navigation/app/src/main/res/layout-h470dp/main_activity.xml
+++ b/PR246-Navigation/app/src/main/res/layout-h470dp/main_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Navigation drawer when not height enough. -->
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawerLayout"
+<!-- NavigationBottomBar when height enough -->
+<LinearLayout
+    android:id="@+id/llRoot"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- Hueco inteligente para la navegación
          Se le indica el recurso de especificación de navegación
@@ -15,15 +16,21 @@
         android:id="@+id/navHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_navigation"/>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:elevation="8dp"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:layout_insetEdge="bottom"
         app:menu="@menu/main_activity_bottom_nav"/>
 
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
