pr246 add another level

--- a/PR246-Navigation/app/src/main/res/layout/option2_fragment.xml
+++ b/PR246-Navigation/app/src/main/res/layout/option2_fragment.xml
@@ -3,18 +3,14 @@
     android:id="@+id/main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize"
-    tools:context=".ui.main.option1.Option1Fragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/lblMessage"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:text="Secondary fragment"
+        android:text="@string/option2"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
