--- a/PR246-Navigation/app/src/main/res/navigation/main_navigation.xml
+++ b/PR246-Navigation/app/src/main/res/navigation/main_navigation.xml
@@ -10,26 +10,27 @@
         android:label="Option 1"
         tools:layout="@layout/option1_fragment">
         <action
-            android:id="@+id/actionMainToSecondary"
-            app:destination="@id/option2Fragment"/>
-        <action
             android:id="@+id/actionMainToAnother"
             app:destination="@id/anotherActivity"
             app:popUpToInclusive="false"/>
         <action
-            android:id="@+id/actionMainToDetail"
-            app:destination="@id/option3Fragment"
-            />
+            android:id="@+id/actionOption1ToOption1a"
+            app:destination="@id/option1aFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/option1aFragment"
+        android:name="es.iessaladillo.pedrojoya.pr246_navigation.ui.main.option1.Option1aFragment"
+        android:label="option1a_fragment"
+        tools:layout="@layout/option1a_fragment" >
+        <argument
+            android:name="counter"
+            android:defaultValue="0"/>
     </fragment>
     <fragment
         android:id="@+id/option2Fragment"
         android:name="es.iessaladillo.pedrojoya.pr246_navigation.ui.main.option2.Option2Fragment"
         android:label="Option 2"
-        tools:layout="@layout/option2_fragment">
-        <argument
-            android:name="counter"
-            android:defaultValue="0"/>
-    </fragment>
+        tools:layout="@layout/option2_fragment"/>
     <fragment
         android:id="@+id/option3Fragment"
         android:name="es.iessaladillo.pedrojoya.pr246_navigation.ui.main.option3.Option3Fragment"
