--- a/PR224-ScrollAwareFab/app/src/main/res/layout/activity_main.xml
+++ b/PR224-ScrollAwareFab/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,18 @@
 <!-- Always set id for all views to restore state on orientation change -->
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -20,11 +20,11 @@
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/activity_main_content"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,8 +32,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/activity_main_fab_margin"
         android:layout_marginBottom="@dimen/activity_main_fab_margin"
-        app:layout_behavior="es.iessaladillo.pedrojoya.pr224.ScrollAwareFabBehavior"
+        app:layout_behavior="es.iessaladillo.pedrojoya.pr224.base.ScrollAwareFabBehavior"
         app:elevation="@dimen/activity_main_fab_elevation"
         app:pressedTranslationZ="@dimen/activity_main_fab_transz" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
