--- a/PR229-ListAdapter/app/src/main/res/layout/activity_main.xml
+++ b/PR229-ListAdapter/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <TextView
-        android:id="@+id/emptyView"
+        android:id="@+id/lblEmptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
