PR250 - Refactor resources names

--- a/PR250-Fragments/app/src/main/res/layout/fragment_main.xml
+++ b/PR250-Fragments/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <androidx.core.widget.NestedScrollView
     android:id="@+id/svLorem"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,9 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="@dimen/activity_main_txtLorem_padding"
+            android:padding="@dimen/main_txtLorem_padding"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            tools:text="@string/fragment_main_lblOption"/>
+            tools:text="@string/main_lblOption"/>
 
         <TextView
             android:id="@+id/txtLorem"
@@ -29,8 +28,8 @@
             android:layout_below="@+id/lblOption"
             android:layout_alignParentBottom="true"
             android:textSize="20sp"
-            android:padding="@dimen/activity_main_txtLorem_padding"
-            android:text="@string/activity_main_txtLorem"/>
+            android:padding="@dimen/main_txtLorem_padding"
+            android:text="@string/main_txtLorem"/>
 
     </RelativeLayout>
 
