--- a/PR250-Fragments/app/src/main/res/values/dimens.xml
+++ b/PR250-Fragments/app/src/main/res/values/dimens.xml
@@ -1,4 +1,3 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="activity_main_txtLorem_padding">16dp</dimen>
+    <dimen name="main_txtLorem_padding">16dp</dimen>
 </resources>
