--- a/PR249-SingleActivityMasterDetail/app/src/main/res/layout/fragment_main.xml
+++ b/PR249-SingleActivityMasterDetail/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,7 @@
         android:paddingTop="@dimen/fragment_main_lstItems_padding"/>
 
     <TextView
-        android:id="@+id/lblEmpty"
+        android:id="@+id/lblEmptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
