--- a/PR086-PopupMenu/app/src/main/res/layout/activity_main.xml
+++ b/PR086-PopupMenu/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,8 @@
-<ListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lstStudents"
+    android:id="@+id/flContent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_main_horizontal_margin"
-    android:divider="@null"
-    android:dividerHeight="0dp"
-    tools:listitem="@layout/activity_main_item"/>
+    tools:ignore="MergeRootFrame" />
