--- a/PR059-ActionView/app/src/main/res/layout/fragment_main.xml
+++ b/PR059-ActionView/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         android:paddingTop="@dimen/main_lstStudents_padding"/>
 
     <TextView
-        android:id="@+id/lblEmpty"
+        android:id="@+id/lblEmptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
