PR057 - Refactor so it only contains individual contextual action mode

--- a/PR057-ContextualActionMode/app/src/main/res/layout/activity_main.xml
+++ b/PR057-ContextualActionMode/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,8 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flContent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/general_activity_margin">
-
-    <TextView
-        android:id="@+id/lblStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:labelFor="@+id/txtStudent"
-        android:text="@string/activity_main_lblStudent"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <EditText
-        android:id="@+id/txtStudent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblStudent"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:ems="@integer/activity_main_txtStudent_ems"
-        android:inputType="textPersonName"
-        tools:ignore="Autofill">
-
-        <requestFocus/>
-    </EditText>
-
-    <TextView
-        android:id="@+id/lblSubjects"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtStudent"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:labelFor="@+id/lstSubjects"
-        android:text="@string/activity_main_lblSubjects"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <ListView
-        android:id="@+id/lstSubjects"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/lblSubjects"
-        tools:listitem="@layout/activity_main_item"/>
-</RelativeLayout>
+    tools:ignore="MergeRootFrame" />
