--- a/PR104-Toolbar/app/src/main/res/layout/fragment_main.xml
+++ b/PR104-Toolbar/app/src/main/res/layout/fragment_main.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/activity_main_lblTitle"/>
+        android:text="@string/main_lblTitle"/>
 
 </RelativeLayout>
