--- a/PR104-Toolbar/app/src/main/res/menu/activity_main.xml
+++ b/PR104-Toolbar/app/src/main/res/menu/activity_main.xml
@@ -3,6 +3,6 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/mnuSettings"
-        android:title="@string/activity_main_mnuSettings"
+        android:title="@string/main_mnuSettings"
         app:showAsAction="never" />
 </menu>
