--- a/PR104-Toolbar/app/src/main/res/menu/fragment_main.xml
+++ b/PR104-Toolbar/app/src/main/res/menu/fragment_main.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/mnuNext"
         android:icon="@drawable/ic_exit_to_app_white_24dp"
-        android:title="@string/activity_main_mnuNext"
+        android:title="@string/main_mnuNext"
         app:showAsAction="ifRoom|withText" />
 </menu>
