--- a/PR144-AppBarLayout/app/src/main/res/layout/fragment_main.xml
+++ b/PR144-AppBarLayout/app/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/txtLorem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/activity_main_txtLorem_padding"
-        android:text="@string/activity_main_txtLorem"/>
+        android:padding="@dimen/main_txtLorem_padding"
+        android:text="@string/main_txtLorem"/>
 
 </androidx.core.widget.NestedScrollView>
