--- a/PR145-CollapsingToolbarLayout/app/src/main/res/layout/activity_main.xml
+++ b/PR145-CollapsingToolbarLayout/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,15 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_main_appbarLayout_height"
+        android:layout_height="@dimen/main_appbarLayout_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:expandedTitleMarginStart="@dimen/activity_main_collapsingToolbar_titleMarginStart"
+            app:expandedTitleMarginStart="@dimen/main_collapsingToolbar_titleMarginStart"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true">
 
