--- a/PR146-CollapsingParallaxToolbar/app/src/main/res/values/dimens.xml
+++ b/PR146-CollapsingParallaxToolbar/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
-    <dimen name="activity_main_txtLorem_padding">20dp</dimen>
-    <dimen name="activity_main_appbarLayout_height">256dp</dimen>
-    <dimen name="activity_main_collapsingToolbarLayout_titleMarginStart">32dp</dimen>
-    <dimen name="activity_main_imgHeader_collapseParallaxMultiplier"
-           type="float">0.3</dimen>
+    <dimen name="main_txtLorem_padding">20dp</dimen>
+    <dimen name="main_appbarLayout_height">256dp</dimen>
+    <dimen name="main_collapsingToolbarLayout_titleMarginStart">32dp</dimen>
+    <dimen name="main_imgHeader_collapseParallaxMultiplier" type="float">0.3</dimen>
 </resources>
