--- a/PR148-FloatingActionButton/app/src/main/res/layout/activity_main.xml
+++ b/PR148-FloatingActionButton/app/src/main/res/layout/activity_main.xml
@@ -9,30 +9,30 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_main_appbarLayout_height"
+        android:layout_height="@dimen/main_appbarLayout_height"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="@dimen/activity_main_collapsingToolbar_expandedTitleMarginStart"
-            app:expandedTitleMarginBottom="@dimen/activity_main_collapsingToolbar_expandedTitleMarginBottom"
+            app:expandedTitleMarginStart="@dimen/main_collapsingToolbar_expandedTitleMarginStart"
+            app:expandedTitleMarginBottom="@dimen/main_collapsingToolbar_expandedTitleMarginBottom"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/imgHeader"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@string/activity_main_imgHeader"
+                android:contentDescription="@string/main_imgHeader"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/photo"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="@dimen/activity_main_imgHeader_collapseParallaxMultiplier"/>
+                app:layout_collapseParallaxMultiplier="@dimen/main_imgHeader_collapseParallaxMultiplier"/>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbarLayout"
         app:layout_anchorGravity="bottom|right|end"
-        app:srcCompat="@drawable/ic_add_white_24dp"
-        android:layout_marginEnd="@dimen/activity_main_fab_margin"/>
+        app:srcCompat="@drawable/ic_save_white_24dp"
+        android:layout_marginEnd="@dimen/main_fab_margin"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
