PR092 - Preserve refreshing state

--- a/PR092-SwipeRefreshLayout/app/src/main/res/layout/fragment_main.xml
+++ b/PR092-SwipeRefreshLayout/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,7 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/swipeRefreshLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,20 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lstList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lstList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <TextView
-            android:id="@+id/emptyView"
+            android:id="@+id/lblEmptyView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/fragment_main_no_data_yet"
+            android:drawablePadding="@dimen/fragment_main_emptyView_drawablePadding"
             android:drawableTop="@drawable/ic_sentiment_dissatisfied_black_48dp"
-            android:drawablePadding="@dimen/fragment_main_emptyView_drawablePadding"/>
+            android:text="@string/fragment_main_no_data_yet"/>
 
     </RelativeLayout>
 
