PR138 - Refactor code

--- a/PR138-Palette/app/src/main/res/layout/fragment_main.xml
+++ b/PR138-Palette/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/imgPhoto"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="@string/activity_main_imgPhoto"
+        android:contentDescription="@string/main_imgPhoto"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="h,16:9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +38,8 @@
         android:layout_marginBottom="0dp"
         android:layout_marginStart="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblVibrant"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblVibrant"
         app:layout_constraintBottom_toTopOf="@+id/lblMuted"
         app:layout_constraintEnd_toStartOf="@+id/lblLightVibrant"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,8 +53,8 @@
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblLightVibrant"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblLightVibrant"
         app:layout_constraintBottom_toTopOf="@+id/lblLightMuted"
         app:layout_constraintEnd_toStartOf="@+id/lblDarkVibrant"
         app:layout_constraintHorizontal_bias="0.5"
@@ -68,8 +68,8 @@
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblDarkVibrant"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblDarkVibrant"
         app:layout_constraintBottom_toTopOf="@+id/lblDarkMuted"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -84,8 +84,8 @@
         android:layout_marginBottom="0dp"
         android:layout_marginStart="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblMuted"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblMuted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/lblLightMuted"
         app:layout_constraintHorizontal_bias="0.5"
@@ -98,8 +98,8 @@
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblLightMuted"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblLightMuted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/lblDarkMuted"
         app:layout_constraintHorizontal_bias="0.5"
@@ -113,8 +113,8 @@
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="0dp"
         android:gravity="center"
-        android:padding="@dimen/activity_main_padding"
-        android:text="@string/activity_main_lblDarkMuted"
+        android:padding="@dimen/main_padding"
+        android:text="@string/main_lblDarkMuted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
