--- a/PR251-SQLite/app/src/main/res/layout/fragment_student.xml
+++ b/PR251-SQLite/app/src/main/res/layout/fragment_student.xml
@@ -62,11 +62,13 @@
         app:layout_constraintStart_toEndOf="@+id/imgGrade"
         app:layout_constraintTop_toBottomOf="@+id/tilName">
 
-        <es.iessaladillo.pedrojoya.pr251.utils.ClickToSelectEditText
+        <es.iessaladillo.pedrojoya.pr251.views.SpinnerEditText
             android:id="@+id/txtGrade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_arrow_drop_down"
+            android:hint="@string/fragment_student_imgGrade"
+            app:entries="@array/grades"
             android:imeOptions="actionNext"
             android:inputType="none"/>
 
