--- a/PR129-RelojMultihilo/app/src/main/res/layout/fragment_main.xml
+++ b/PR129-RelojMultihilo/app/src/main/res/layout/fragment_main.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/activity_main_lblTime_marginBottom"
+        android:layout_marginBottom="@dimen/main_lblTime_marginBottom"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/activity_main_lblTime_textSize"
+        android:textSize="@dimen/main_lblTime_textSize"
         tools:text="00:00:00"/>
 
     <Button
@@ -23,6 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/lblTime"
         android:layout_centerHorizontal="true"
-        android:text="@string/activity_main_btnStart"/>
+        android:text="@string/main_btnStart"/>
 
 </RelativeLayout>
