--- a/PR134-BroadcastReceiver/app/src/main/res/layout/fragment_main.xml
+++ b/PR134-BroadcastReceiver/app/src/main/res/layout/fragment_main.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/main_margin"
-    tools:context=".ui.main.MainActivity">
+    tools:application=".ui.main.MainActivity">
 
     <TextView
         android:id="@+id/lblLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/activity_main_lblLevel"
+        android:text="@string/main_lblLevel"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -21,19 +21,9 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:max="@integer/activity_main_pbLevel_max"
+        android:max="@integer/main_pbLevel_max"
         app:layout_constraintTop_toBottomOf="@+id/lblLevel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-
-    <Button
-        android:id="@+id/btnNews"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/main_margin"
-        android:text="@string/main_btnNews"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
