--- a/PR134-BroadcastReceiver/app/src/main/res/values/integers.xml
+++ b/PR134-BroadcastReceiver/app/src/main/res/values/integers.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="activity_main_pbLevel_max">100</integer>
+    <integer name="main_pbLevel_max">100</integer>
 </resources>
